--- a/HW1_NS.ipynb
+++ b/HW1_NS.ipynb
@@ -58,7 +58,8 @@
         "\n",
         "# defining paramteres according to the question\n",
         "\n",
-        "x = np.linspace(0, 10*np.pi, 300)  # range with 300 steps and goes from 0 - 10pi\n",
+        "x = np.linspace(0, 10*np.pi, 300)\n",
+        "# range with 300 steps and goes from 0 - 10pi\n",
         "k1 = 1.925  #first sine wave\n",
         "k2 = 2.075  #second sine wave\n",
         "amp = 0.2  # amplitude for both waves\n",
@@ -144,7 +145,9 @@
       "source": [
         "plt.plot(x, noisy_wave1, label=f'Sine Wave ({k1}, {amp})')\n",
         "plt.plot(x, noisy_wave2, label=f'Sine Wave ({k2}, {amp})')\n",
-        "plt.plot(x, noisy_wave1 + noisy_wave2, label='Wave 1 + Wave 2',linewidth = 2.5, color ='black') #linewidth is from GPT used for explicit summed graph\n",
+        "plt.plot(x, noisy_wave1 + noisy_wave2,\n",
+        "         label='Wave 1 + Wave 2',linewidth = 2.5, color ='black')\n",
+        " #linewidth is from GPT used for explicit summed graph\n",
         "plt.xlabel('x (in units of pi)')\n",
         "plt.ylabel('Amplitude')\n",
         "plt.title('Noisy Wave Sum')\n",
@@ -184,7 +187,9 @@
         "\n",
         "plt.plot(x, clean_wave1, label=f'Sine Wave ({k1}, {amp})')\n",
         "plt.plot(x, clean_wave2, label=f'Sine Wave ({k2}, {amp})')\n",
-        "plt.plot(x, clean_wave1 + clean_wave2, label='Clean waves sum',linewidth = 2.5, color ='black') #linewidth is from GPT used for explicit summed graph\n",
+        "plt.plot(x, clean_wave1 + clean_wave2,\n",
+        "         label='Clean waves sum',linewidth = 2.5, color ='black')\n",
+        "#linewidth is from GPT used for explicit summed graph\n",
         "plt.xlabel('x (in units of pi)')\n",
         "plt.ylabel('Amplitude')\n",
         "plt.title('Clean waves and sum')\n",
@@ -231,7 +236,9 @@
         "\n",
         "plt.plot(x, noisy_wave1, label=f'Sine Wave ({k1}, {amp})')\n",
         "plt.plot(x, noisy_wave2, label=f'Sine Wave ({k2}, {amp})')\n",
-        "plt.plot(x, noisy_wave1 + noisy_wave2, label='Wave 1 + Wave 2',linewidth = 2.5, color ='black') #linewidth is from GPT used for explicit summed graph\n",
+        "plt.plot(x, noisy_wave1 + noisy_wave2,\n",
+        "         label='Wave 1 + Wave 2',linewidth = 2.5, color ='black')\n",
+        "#linewidth is from GPT used for explicit summed graph\n",
         "plt.xlabel('x (in units of pi)')\n",
         "plt.ylabel('Amplitude')\n",
         "plt.title('Noisy wave and sum')\n",
@@ -356,7 +363,8 @@
         "f1num = deriv2pt_udf(f1, x1, dx_values)\n",
         "f2num = deriv2pt_udf(f2, x2, dx_values)\n",
         "\n",
-        "misfit_f1 = np.abs((f1num - f1d) / f1d)  # calculating misfit; using absolute value to avoid negatives\n",
+        "misfit_f1 = np.abs((f1num - f1d) / f1d)\n",
+        "# calculating misfit; using absolute value to avoid negatives\n",
         "misfit_f2 = np.abs((f2num - f2d) / f2d)"
       ],
       "metadata": {
@@ -375,7 +383,8 @@
         "plt.ylabel('Derivative Misfit')\n",
         "plt.title('2 point numerical derivatives: Misfit v/s Step Size; NS')\n",
         "plt.legend()\n",
-        "plt.gca().invert_xaxis() # ChatGPT syntax for reversing x axis output to match HW figure\n",
+        "plt.gca().invert_xaxis()\n",
+        "# ChatGPT syntax for reversing x axis output to match HW figure\n",
         "plt.grid(True)\n",
         "plt.show()"
       ],
@@ -428,7 +437,8 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "\n",
-        "data = loadmat('/content/drive/MyDrive/DATA_EQarrival.mat', squeeze_me=True) #loading the file\n",
+        "data = loadmat('/content/drive/MyDrive/DATA_EQarrival.mat', squeeze_me=True)\n",
+        "#loading the file\n",
         "\n",
         "t = data['t']\n",
         "y = data['y']    #explicitly assigning t and y\n"
@@ -495,7 +505,9 @@
         "    \"\"\"\n",
         "\n",
         "\n",
-        "    y = np.where(t_arr < t0, 0,(t_arr - t0) * np.sin((2 * np.pi / period) * (t_arr - t0) + phi)) # composite using np.where took inspiration using https://numpy.org/doc/stable/reference/generated/numpy.where.html\n",
+        "    y = np.where(t_arr < t0, 0,(t_arr - t0) * np.sin((2 * np.pi / period) * (t_arr - t0) + phi))\n",
+        "    # composite using np.where took inspiration using\n",
+        "    # https://numpy.org/doc/stable/reference/generated/numpy.where.html\n",
         "\n",
         "\n",
         "    return y"
@@ -513,7 +525,9 @@
         "\n",
         "\n",
         "\n",
-        "plt.plot(t, y, marker = '+', color = 'red', linestyle='None', label = 'Data') # marker + is from https://stackoverflow.com/questions/57171356/how-to-change-marker-in-matplotlib-based-on-sign-of-number\n",
+        "plt.plot(t, y, marker = '+', color = 'red', linestyle='None', label = 'Data')\n",
+        "# marker + is from\n",
+        "#https://stackoverflow.com/questions/57171356/how-to-change-marker-in-matplotlib-based-on-sign-of-number\n",
         "\n",
         "plt.plot(t, yguess, color = 'black', label = r'Fit = $y(t) = (t-6)\\sin\\left(\\frac{2\\pi(t-6)}{2} +\\frac{\\pi}{13.8}\\right)$') # Latex label\n",
         "\n",
