--- a/Hw2.ipynb
+++ b/Hw2.ipynb
@@ -45,7 +45,7 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.plot(age[name =='EPR'], depth[name =='EPR'], 'or', label = 'EPR Data') #assinging tags to plot in different colors\n",
+        "plt.plot(age[name =='EPR'], depth[name =='EPR'], 'or', label = 'EPR Data') #assigning tags to plot in different colors\n",
         "plt.plot(age[name =='CIR'], depth[name =='CIR'], 'dm', label = 'CIR Data')\n",
         "plt.plot(age[name =='MAR'], depth[name =='MAR'], 'sc', label = 'MAR Data')\n",
         "plt.gca().invert_yaxis() #axis invert\n",
@@ -101,11 +101,14 @@
         "    m_best,b_best = np.polyfit(np.sqrt(t[LV]), depth[LV], 1 ) #polyfit using logic stated above\n",
         "\n",
         "    depth_best = np.where(LV2, m_best * np.sqrt(smootht) + b_best, 0)  # exponential before 75 Ma\n",
-        "    depth_best = np.where(~LV2, depth_best[LV2][-1], depth_best)  #unfotunately the two lines were impossible to write in one line using np.where for me\n",
+        "    depth_best = np.where(~LV2, depth_best[LV2][-1], depth_best)\n",
+        "    #unfotunately the two lines were impossible to write in one line using np.where for me\n",
         "    return depth_best, smootht, m_best, b_best\n",
         "\n",
         "#sorting is important as otherwise raph looks pretty bad and it keeps looping over the values\n",
-        "sortedindices = np.argsort(age) # argsort is used from stackoverflow page https://stackoverflow.com/questions/17901218/numpy-argsort-what-is-it-doing\n",
+        "sortedindices = np.argsort(age)\n",
+        "# argsort is used from stackoverflow page\n",
+        "#https://stackoverflow.com/questions/17901218/numpy-argsort-what-is-it-doing\n",
         "sortedage = age[sortedindices]\n",
         "sorteddepth = depth[sortedindices]\n",
         "\n",
@@ -208,7 +211,8 @@
         "    LV = (yy<=0)\n",
         "    xx = xx[~LV]\n",
         "    yy = yy[~LV]\n",
-        "    fit = np.polyfit(xx,np.log(yy), 1) #trying out if it retuns an array and how to assign m and b\n",
+        "    fit = np.polyfit(xx,np.log(yy), 1)\n",
+        "    #trying out if it retuns an array and how to assign m and b\n",
         "    m = fit[0]\n",
         "    b = np.exp(fit[1])\n",
         "    return m,b\n",
@@ -404,7 +408,8 @@
         "Nu = data['Nu']\n",
         "\n",
         "print(Ch)\n",
-        "sortedindices = np.argsort(Ch[0]) #had to sort so that later when i am trying to figure out the ranges it is easier for the eye\n",
+        "sortedindices = np.argsort(Ch[0])\n",
+        "#had to sort so that later when i am trying to figure out the ranges it is easier for the eye\n",
         "sortedCh = Ch[0][sortedindices]\n",
         "print(sortedCh)\n",
         "\n",
@@ -571,7 +576,8 @@
       "source": [
         "time, temp = np.loadtxt(\"/content/drive/MyDrive/LavaBomb.txt\", unpack = True, dtype = float, skiprows = 1) #loading data\n",
         "\n",
-        "plt.scatter(time, temp,color='magenta',edgecolor='magenta', facecolor='none', marker='o' , label = 'Raw Data') # the hollow circles are courtesy of perplexity.ai\n",
+        "plt.scatter(time, temp,color='magenta',edgecolor='magenta', facecolor='none', marker='o' , label = 'Raw Data')\n",
+        "# the hollow circles are courtesy of perplexity.ai\n",
         "plt.xlabel(\"Time since eruption(s)\")\n",
         "plt.ylabel(\"IR thermometer(deg.C)\")\n",
         "plt.title('Lava Bomb Raw Temperature Readings;NS', fontweight='bold')\n",
@@ -659,8 +665,10 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in range(1, len(temp)): # for loop for seeing at what time the transitoin form just right to too cold occurs\n",
-        "    if justright[i-1] and toocold[i]: # if one before is justright and the value we're on is too cold then we have found the time\n",
+        "for i in range(1, len(temp)):\n",
+        "# for loop for seeing at what time ---> just right to too cold occurs\n",
+        "    if justright[i-1] and toocold[i]:\n",
+        "    # if one before is justright and the value we're on is too cold yay\n",
         "        transitiontime1 = time[i]\n",
         "\n",
         "\n",
@@ -746,9 +754,11 @@
         "  bestfit = T1*np.exp(smootht*tau)\n",
         "  return bestfit, smootht\n",
         "\n",
-        "bestfit, smootht = exp(time[justright], temp[justright]) # calling exp function but just using values from just_right using boolean operation\n",
+        "bestfit, smootht = exp(time[justright], temp[justright])\n",
+        "# calling exp function but just using values from just_right using boolean operation\n",
         "\n",
-        "for condition, color, label in zip(conditions, colors, labels): # plotting everything using indices of boolean list before\n",
+        "for condition, color, label in zip(conditions, colors, labels):\n",
+        "   # plotting everything using indices of boolean list before\n",
         "    plt.scatter(time[condition], temp[condition], color=color, edgecolor=color,\n",
         "                facecolor='none', marker='o', label=label, s=10)\n",
         "plt.plot(smootht, bestfit, color = 'black', label = 'Best fit Exptl.',  linewidth=2)\n",
