--- a/HW7.ipynb
+++ b/HW7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1WhsSi9y3bso761P88dJlgkGfG5n41ItZ",
-      "authorship_tag": "ABX9TyNSp9oZ3uEgwra4b/DcwbS5",
+      "authorship_tag": "ABX9TyOj9VRJkreo4e89NSaAs7UB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1050,6 +1050,9 @@
       "source": [
         "dist = dist[idx_start:]\n",
         "fhat = np.fft.fft(dist, len(time))\n",
+        "#fhat cause watched this video for some help\n",
+        "#https://www.youtube.com/watch?v=s2K1JfNR7Sc\n",
+        "\n",
         "amp = 2*np.abs(fhat)/len(dist)\n",
         "\n",
         "freq = np.fft.fftfreq(len(time), fs) #Hz\n",
@@ -1139,6 +1142,8 @@
         "\n",
         "\n",
         "fhat = np.fft.fft(temp, len(time))\n",
+        "\n",
+        "\n",
         "amp = 2*np.abs(fhat)/len(temp)\n",
         "\n",
         "# sampling freq\n",
